--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=pap
 
-spring.datasource.url=jdbc:mysql://localhost:3306/caralho
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://localhost:3306/tickets
+spring.datasource.username=server
+spring.datasource.password=System32
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
